fixed overflow blur

--- a/style.css
+++ b/style.css
@@ -25,13 +25,11 @@ img{
     background-color: blueviolet;
     color:rgb(241, 241, 241);
     font-size: 1.5rem;
-    transform: translate(-50%,-50%);
-    top: 50%;
-    left:50%;
+    top: 8%;
+    left:8%;
     height: 80%;
     width: 80%;
     border-radius: 2vh;
-    /* border: 5px solid #3a3939a2; */
     box-shadow: 1px 1px 10px 1px #38383881;
     padding: 2%;
     overflow: hidden;
@@ -52,7 +50,7 @@ img{
 }
 
 .list-box{
-    display: block;
+    /* display: block; */
     height: 80%;
     max-height: 80%;
     width: 100%;
@@ -64,8 +62,8 @@ img{
     background-color: white;
     color:rgb(75, 75, 75);
     overflow: scroll;
-    -ms-overflow-style: none; 
-    scrollbar-width: none;
+    /* -ms-overflow-style: none;  */
+    /* scrollbar-width: none; */
 }
 
 .list-box::-webkit-scrollbar {
